cleaned up warnings